# DeepLoTX

./: .gitignore  README.md  pyproject.toml
deeplot/: __init__.py
deeplot/encoder/: bert_encoder.py  long_text_encoder.py
deeplot/nn/: base_neural_network.py  linear_regression.py  logistic_regression.py  softmax_regression.py
deeplot/trainer/: base_trainer.py  text_binary_classification_trainer.py
deeplotx/: __init__.py
deeplotx/encoder/: __init__.py  bert_encoder.py  encoder.py  long_text_encoder.py  longformer_encoder.py  tfidf_encoder.py
deeplotx/ner/: __init__.py  base_ner.py  bert_ner.py  named_entity.py
deeplotx/nn/: __init__.py  attention.py  auto_regression.py  base_neural_network.py  feed_forward.py  linear_regression.py  logistic_regression.py  long_context_auto_regression.py  long_context_recursive_sequential.py  multi_head_attention.py  multi_head_feed_forward.py  recursive_sequential.py  roformer_encoder.py  rope.py  self_attention.py  softmax_regression.py
deeplotx/similarity/: __init__.py  base_similarity.py  distribution.py  set.py  vector.py
deeplotx/trainer/: __init__.py  base_trainer.py  text_binary_classification_trainer.py
deeplotx/util/: __init__.py  read_file.py
lotc/: __init__.py
lotc/embedding/: __init__.py  bert_encoder.py  long_text_embedding.py
lotc/encoder/: __init__.py  bert_encoder.py  long_text_encoder.py
lotc/nn/: __init__.py  base_neural_network.py  (+3 more)
ltc/: __init__.py
test/: long_text_binary_classification_trainer.ipynb  ner.ipynb  test.ipynb  test.py  test_1.ipynb  token_combination.ipynb
(+254 files in other folders)
