[project]
name = "deeplotx"
version = "0.8.6"
description = "Easy-2-use long text NLP toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hf-xet",
    "jupyter",
    "numpy",
    "protobuf",
    "python-dotenv",
    "torch",
    "transformers",
    "typing-extensions",
    "vortezwohl>=0.0.8",
]
