[project]
name = "deeplotx"
version = "0.9.2"
description = "An out-of-the-box long-text NLP framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hf-xet",
    "jupyter",
    "numpy",
    "protobuf",
    "python-dotenv",
    "sentencepiece",
    "tiktoken",
    "torch",
    "transformers",
    "typing-extensions",
    "vortezwohl>=0.0.8",
    "name4py>=0.1.4",
]
